--- a/css/styles.css
+++ b/css/styles.css
@@ -61,7 +61,7 @@
   --bs-body-font-weight: 400;
   --bs-body-line-height: 1.5;
   --bs-body-color: #212529;
-  --bs-body-bg: #fff;
+  --bs-body-bg: #121212;
 }
 
 *,
@@ -7723,7 +7723,7 @@ textarea.form-control-lg {
 
 .text-secondary {
   --bs-text-opacity: 1;
-  color: rgba(var(--bs-secondary-rgb), var(--bs-text-opacity)) !important;
+  color: #fff !important;
 }
 
 .text-success {
@@ -11318,7 +11318,7 @@ html {
   width: 100%;
   max-width: 7rem;
   height: 0.25rem;
-  background-color: #2c3e50;
+  background-color: #fff;
   border-radius: 1rem;
   border-color: #2c3e50;
 }
@@ -11329,7 +11329,7 @@ html {
   margin-left: 1rem;
 }
 .divider-custom .divider-custom-icon {
-  color: #2c3e50;
+  color: #fff;
   font-size: 2rem;
 }
 .divider-custom.divider-light .divider-custom-line {
@@ -11428,7 +11428,7 @@ html {
 }
 .form-floating label {
   font-size: 1.5rem;
-  color: #6c757d;
+  color: #fff;
 }
 
 .masthead {
@@ -11527,4 +11527,104 @@ html {
 
 #divEmail {
   color: red;
+}
+
+.formContact input, .formContact textarea {
+  background-color: #121212;
+}
+
+.bg-light {
+  width: 70px;
+  height: 30px;
+  border: 3px solid #000;
+  border-radius: 60px;
+  position: relative;
+  cursor: pointer;
+}
+
+.bg-light:before {
+  content: '';
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  /* background: #000; */
+  border-left: 5.5px solid #000;
+  border-radius: 100%;
+  transform: rotate(-40deg);
+  /* top: 50%; */
+  left: 8px;
+  /* transform: translateY(-50%); */
+  transition: 0.3s;
+}
+
+.bg-light.active:before {
+  border: 1px solid yellow;
+  background: yellow;
+  top: 10%;
+  border-radius: 50%;
+  left: 35px;
+}
+
+.text-secondary.active {
+  color: rgb(44, 62, 80) !important;
+  transition: 0.3s;
+}
+
+.text-secondary {
+  transition: 0.3s;
+}
+
+#portfolio.active, #contact.active {
+  background: #fff;
+  transition: 0.3s;
+}
+
+#portfolio, #contact {
+  transition: 0.3s;
+}
+
+.divider-black.active {
+  color: #2c3e50 !important;
+  transition: 0.3s;
+}
+
+.divider-black {
+  transition: 0.3s;
+}
+
+.divider-custom-line.active {
+  background-color: #2c3e50 !important;
+  transition: 0.3s;
+}
+
+.divider-custom-line {
+  transition: 0.3s;
+}
+
+.textForm.active {
+  color: #6c757d !important;
+  transition: 0.3s;
+}
+
+.textForm {
+  transition: 0.3s;
+}
+
+.bg-form.active {
+  background-color: #fff !important;
+  transition: 0.3s;
+}
+
+.bg-form {
+  transition: 0.3s;
+}
+
+.send-light.active {
+  background-color: #1abc9c !important;
+  border-color: #1abc9c !important;
+  transition: 0.3s;
+}
+
+.send-light {
+  transition: 0.3s;
 }
