--- a/css/styles.css
+++ b/css/styles.css
@@ -7837,10 +7837,10 @@ textarea.form-control-lg {
   background-color: rgba(var(--bs-danger-rgb), var(--bs-bg-opacity)) !important;
 }
 
-.bg-light {
+/* .bg-light {
   --bs-bg-opacity: 1;
   background-color: rgba(var(--bs-light-rgb), var(--bs-bg-opacity)) !important;
-}
+} */
 
 .bg-dark {
   --bs-bg-opacity: 1;
@@ -11537,9 +11537,11 @@ html {
   width: 70px;
   height: 30px;
   border: 3px solid #000;
+  background-color: #fff;
   border-radius: 60px;
   position: relative;
   cursor: pointer;
+  transition: 0.3s;
 }
 
 .bg-light:before {
@@ -11554,6 +11556,11 @@ html {
   /* top: 50%; */
   left: 8px;
   /* transform: translateY(-50%); */
+  transition: 0.3s;
+}
+
+.bg-light.active {
+  background-color: rgb(44, 62, 80);
   transition: 0.3s;
 }
 
